# crux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/crux-cli/: Cargo.toml
crates/crux-cli/src/: commands.rs  main.rs
crates/crux-cli/tests/: cli_integration.rs
crates/crux-core/: Cargo.toml
crates/crux-core/benches/: filter_bench.rs
crates/crux-core/filters/: ansible.toml  curl_verbose.toml  gradle.toml  helm.toml  kubectl.toml  make.toml  mvn.toml  pip.toml  pnpm.toml  rustc.toml  ssh.toml  terraform.toml  yarn.toml
crates/crux-core/filters/kubectl_test/: expected.txt  input.txt
crates/crux-core/filters/make_test/: expected.txt  input.txt
crates/crux-core/filters/terraform_test/: input.txt
crates/crux-core/src/: lib.rs  runner.rs  verify.rs
crates/crux-core/src/config/: cache.rs  mod.rs  resolve.rs  types.rs
crates/crux-core/src/filter/: cleanup.rs  context.rs  dedup.rs  extract.rs  lua.rs  match_output.rs  mod.rs  replace.rs  section.rs  skip.rs  tee.rs  template.rs  universal.rs  variant.rs
crates/crux-core/src/filter/builtin/: cargo.rs  docker.rs  firebase.rs  fs.rs  gh.rs  git.rs  git_extra.rs  golang.rs  jsbuild.rs  mod.rs  npm.rs  php.rs  python.rs  supabase.rs  testrunners.rs  util.rs
crates/crux-core/tests/: fixture_tests.rs
crates/crux-hook/: Cargo.toml
crates/crux-hook/src/: claude.rs  codex.rs
crates/crux-tracking/: Cargo.toml
crates/crux-tracking/src/: db.rs  events.rs  history.rs  lib.rs
tests/fixtures/: cargo_build_errors.txt  cargo_test_fail.txt  cargo_test_pass.txt  docker_ps.txt  gh_pr_list.txt  git_diff.txt  git_log.txt  git_status_dirty.txt  npm_install.txt
