[workspace]
resolver = "2"
members = [
    "crates/crux-core",
    "crates/crux-cli",
    "crates/crux-hook",
    "crates/crux-tracking",
]

# Note: crate names use "cruxai-" prefix on crates.io (crux_core was taken)
# but directory names remain "crux-" locally

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polaminggkub-debug/crux"
homepage = "https://github.com/polaminggkub-debug/crux"
keywords = ["cli", "ai", "tokens", "filter", "compression"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
memchr = "2"
rkyv = { version = "0.7", features = ["validation"] }
include_dir = "0.7"
mlua = { version = "0.9", features = ["luau", "vendored"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
