[package]
name = "crux-cli"
version.workspace = true
edition = "2021"
license.workspace = true
description = "CLI binary for crux"

[[bin]]
name = "crux"
path = "src/main.rs"

[dependencies]
crux-core = { path = "../crux-core" }
crux-tracking = { path = "../crux-tracking", optional = true }
anyhow = { workspace = true }
clap = { workspace = true }

[features]
default = ["tracking"]
tracking = ["dep:crux-tracking"]
