[package]
name = "crux-cli"
version.workspace = true
edition = "2021"
license.workspace = true
description = "CLI binary for crux"

[[bin]]
name = "crux"
path = "src/main.rs"

[dependencies]
crux-core = { path = "../crux-core" }
crux-hook = { path = "../crux-hook" }
crux-tracking = { path = "../crux-tracking", optional = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }

[features]
default = ["tracking"]
tracking = ["dep:crux-tracking"]
