[package]
name = "cruxai-cli"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "CLI binary for crux: compress CLI output for AI agents"

[[bin]]
name = "crux"
path = "src/main.rs"

[dependencies]
crux_core = { package = "cruxai-core", path = "../crux-core", version = "0.3.0" }
crux_hook = { package = "cruxai-hook", path = "../crux-hook", version = "0.3.0" }
crux_tracking = { package = "cruxai-tracking", path = "../crux-tracking", version = "0.3.0", optional = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }

[features]
default = ["tracking"]
tracking = ["dep:crux_tracking"]
