[package]
name = "crux-core"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Core library for crux: filter engine, config, types"

[features]
default = []
lua = ["dep:mlua"]
cache = ["dep:rkyv"]

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
memchr = { workspace = true }
include_dir = { workspace = true }
mlua = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
