[package]
name = "cruxai-core"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Core library for crux: filter engine, config, types"

[lib]
name = "crux_core"

[features]
default = []
lua = ["dep:mlua"]
cache = ["dep:rkyv"]

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
memchr = { workspace = true }
include_dir = { workspace = true }
mlua = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "filter_bench"
harness = false
