[package]
name = "cruxai-hook"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Agent integration hooks for crux (Claude Code, Codex)"

[lib]
name = "crux_hook"

[dependencies]
crux_core = { package = "cruxai-core", path = "../crux-core", version = "0.3.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
